<resources>
    <string name="app_name">MoView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contra">Contraseña</string>
    <string name="ingresoUsuario">Ingresa tu usuario</string>
    <string name="ingresoContra">Ingresa tu contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="ingresoCorreo">Ingresa tu correo electrónico</string>
    <string name="repetirContra">Repetir contraseña</string>
    <string name="criticoCine">¿Eres crítico de Cine?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="usuario">Usuario</string>
    <string name="registro">¿Aún no tienes cuenta? registrate aquí</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="calificaPelicula">Califica esta película</string>
    <string name="acerca_de">Sinopsis</string>
    <string name="reparto">Reparto</string>
    <string name="comentarios">Comentarios</string>
    <string name="like">Muy buena</string>
    <string name="dislike">Pésima</string>
    <string name="comentario">Comentario</string>
    <string name="publicar">Publicar</string>
    <string name="editarUsuario">Ingresa tu nuevo usuario</string>
    <string name="editarcontra">Ingresa tu contraseña (Campo obligatorio)</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="child_title">Titulo de la pelicula</string>
    <string name="tus_calificaciones">Tus calificaciones</string>
    <string name="busqueda">Búsqueda...</string>
    <string name="proximos_estrenos">Próximos estrenos</string>
    <string name="peliculas">Películas</string>
    <string name="series">Series</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="preguntaComentarioTitulo">¿Cómo le pareció la película/serie?</string>
</resources>