<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.editarPerfil.EditarPerfilFragment"
    android:background="@color/fondoOscuro">
    <ImageView
        android:id="@+id/imagenperfilEditar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/separacion40dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="580dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenperfilEditar"
        android:backgroundTint="@color/fondoClaro"
        android:layout_marginTop="@dimen/separacion40dp"
        app:cardCornerRadius="25dp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/usuarioTextEditarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/separacion10dp"
                android:id="@+id/ingresoUsuariorEditarPerfil"
                app:layout_constraintTop_toBottomOf="@id/usuarioTextEditarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:hint="@string/editarUsuario"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/contraTextEditarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingresoUsuariorEditarPerfil"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:text="@string/contra"
                android:layout_marginTop="@dimen/separacion10dp"
                android:textColor="@color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/separacion10dp"
                android:id="@+id/ingresoContraEditarPerfil"
                app:layout_constraintTop_toBottomOf="@id/contraTextEditarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:hint="@string/editarcontra"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/botonGuardarCambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:layout_marginBottom="@dimen/bottom_margin_save"
                android:backgroundTint="@color/colorBotones"
                android:text="@string/guardar_cambios"
                />
            <TextView
                android:id="@+id/criticoDeCineTextEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:text="@string/criticoCine"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/botonGuardarCambios"
                android:layout_marginBottom="53dp"/>

            <RadioButton
                android:id="@+id/radioButtonNoEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/botonGuardarCambios"
                android:layout_marginBottom="@dimen/separacion40dp"
                android:layout_marginEnd="@dimen/margenHorizontal"
                android:textColor="@color/white"/>
            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioButtonSiEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/botonGuardarCambios"
                android:layout_marginBottom="@dimen/separacion40dp"
                app:layout_constraintEnd_toStartOf="@id/radioButtonNoEditar"
                android:layout_marginEnd="@dimen/margenHorizontal"
                android:text="@string/si"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>