<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegistroUsuario.RegistroUsuarioFragment"
    android:background="@color/fondoOscuro">

    <ImageView
        android:id="@+id/logoRegistro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_logo2_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/carta"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/carta"
        android:layout_width="0dp"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoRegistro"
        android:backgroundTint="@color/fondoClaro"
        app:cardCornerRadius="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/usuarioTextRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="30dp"
                android:text="@string/usuario"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingresoUsuarioregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:hint="@string/ingresoUsuario"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="@dimen/radio"
                app:boxCornerRadiusBottomStart="@dimen/radio"
                app:boxCornerRadiusTopEnd="@dimen/radio"
                app:boxCornerRadiusTopStart="@dimen/radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usuarioTextRegistro">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/CorreoTextRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:text="@string/correo"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingresoUsuarioregistro" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingresoCorreoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:hint="@string/ingresoCorreo"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="@dimen/radio"
                app:boxCornerRadiusBottomStart="@dimen/radio"
                app:boxCornerRadiusTopEnd="@dimen/radio"
                app:boxCornerRadiusTopStart="@dimen/radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CorreoTextRegistro">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/contraTextRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:text="@string/contra"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingresoCorreoRegistro" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingresoContraRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:hint="@string/ingresoContra"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="@dimen/radio"
                app:boxCornerRadiusBottomStart="@dimen/radio"
                app:boxCornerRadiusTopEnd="@dimen/radio"
                app:boxCornerRadiusTopStart="@dimen/radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contraTextRegistro">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/repetirContraRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:text="@string/repetirContra"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingresoContraRegistro" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingresoRepetirContraRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:hint="@string/ingresoContra"
                android:textColorHint="@color/colorTextInputs"
                app:boxBackgroundColor="@color/fondoOscuro"
                app:boxCornerRadiusBottomEnd="@dimen/radio"
                app:boxCornerRadiusBottomStart="@dimen/radio"
                app:boxCornerRadiusTopEnd="@dimen/radio"
                app:boxCornerRadiusTopStart="@dimen/radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repetirContraRegistro">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/criticoDeCineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenHorizontal"
                android:layout_marginTop="@dimen/separacion10dp"
                android:text="@string/criticoCine"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingresoRepetirContraRegistro" />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:layout_constraintTop_toBottomOf="@+id/ingresoRepetirContraRegistro"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margenHorizontal"
                android:textColor="@color/white"/>
            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/radioButtonSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ingresoRepetirContraRegistro"
                app:layout_constraintEnd_toStartOf="@id/radioButtonNo"
                android:layout_marginEnd="@dimen/margenHorizontal"
                android:text="@string/si"
                />
            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/criticoDeCineText"
                android:layout_marginTop="@dimen/separacion10dp"
                android:layout_marginHorizontal="@dimen/margenHorizontal"
                android:backgroundTint="@color/colorBotones"
                android:text="@string/crearCuenta"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>