<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.detalles.DetallesFragment"
    android:background="@color/fondoOscuro"
    >

    <ImageView
        android:id="@+id/cartelPeliculaDetalles"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#7F000000"/>
    <ImageView
        android:id="@+id/posterPeliculaDetalles"
        android:layout_width="80dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginStart="@dimen/margenHorizontal"
        />
    <ImageButton
        android:id="@+id/botonBackDetalles"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/separacion10dp"
        android:layout_marginStart="@dimen/separacion10dp"
        android:background="@drawable/ic_baseline_circle_24"
        android:src="@drawable/ic_back"
        />

    <TextView
        android:id="@+id/textviewPreguntaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cartelPeliculaDetalles"
        app:layout_constraintStart_toEndOf="@id/posterPeliculaDetalles"
        android:layout_marginStart="@dimen/margenHorizontal"
        android:text="Nombre"
        android:textColor="@color/white"
        android:textSize="27sp"
        />
    <TextView
        android:id="@+id/datosPelicula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textviewPreguntaTitulo"
        app:layout_constraintStart_toEndOf="@id/posterPeliculaDetalles"
        android:layout_marginStart="@dimen/margenHorizontal"
        android:text="Año - Director"
        android:textColor="@color/white"
        android:textSize="15dp"
        />
    <ImageView
        android:id="@+id/iconoLike"
        android:layout_width="@dimen/sizeIcono"
        android:layout_height="@dimen/sizeIcono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterPeliculaDetalles"
        android:src="@drawable/ic_like"
        android:layout_marginTop="@dimen/separacion10dp"
        android:layout_marginStart="50dp"
        />
    <TextView
        android:id="@+id/porcentajeDeLikesDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iconoLike"
        app:layout_constraintTop_toTopOf="@id/iconoLike"
        app:layout_constraintBottom_toBottomOf="@id/iconoLike"
        android:text="##%"
        android:textColor="@color/main_light_green"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/calificaPeliculaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calificaPelicula"
        android:textColor="@color/main_light_green"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margenHorizontal"
        android:layout_marginStart="3dp"
        app:layout_constraintTop_toTopOf="@id/botonCalificaPeliculaDetalles"
        app:layout_constraintBottom_toBottomOf="@id/botonCalificaPeliculaDetalles"
        android:textSize="18sp"
        />
    <ImageButton
        android:id="@+id/botonCalificaPeliculaDetalles"
        android:layout_width="@dimen/sizeIcono"
        android:layout_height="@dimen/sizeIcono"
        android:src="@drawable/ic_baseline_add_box_24"
        app:layout_constraintEnd_toStartOf="@id/calificaPeliculaText"
        app:layout_constraintTop_toTopOf="@id/iconoLike"
        app:layout_constraintBottom_toBottomOf="@id/iconoLike"
        android:layout_marginTop="@dimen/separacion10dp"
        android:backgroundTint="@color/fondoOscuro"
        />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tab_layout_DetallesActivity"
        android:layout_marginTop="@dimen/separacion10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calificaPeliculaText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/fondoOscuro"
        app:tabSelectedTextColor="@color/main_light_green"
        app:tabIndicatorColor="@color/main_light_green"
        app:tabTextColor="@color/main_light_green">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reparto"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/comentarios"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/details_view_pager"
        app:layout_constraintTop_toBottomOf="@id/tab_layout_DetallesActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>